--- a/D) Set.ipynb
+++ b/D) Set.ipynb
@@ -614,7 +614,7 @@
    "id": "077586d3-a93b-4399-88ee-7ed4acf34122",
    "metadata": {},
    "source": [
-    "That's it about Sets. We completed our 4 data important data types - List,Tuple,Dictionary and Set. <br>\n",
+    "That's it about Sets. We completed our 4 important data types - List,Tuple,Dictionary and Set. <br>\n",
     "Keep practicing questions from the above topics as they are all considered as important data types. <br>\n",
     "Happy Learning!"
    ]
